[package]
name = "advaiya-currency"
version = "0.1.0"
edition = "2021"
description = "This is currency project build on rust "
repository = "https://github.com/Advock/advaiya-currency"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = "0.1.6"
blockchain = "0.9.2"
hashable = "0.0.0"
transaction = "0.2.1"
hex = "0.4.3"
crypto-hash = "0.3.4"
